--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -46,6 +46,7 @@
 @import "component.eventform";
 @import "component.events";
 @import "component.event";
+@import "component.events-panel";
 
 //header
 @import "component.header";
@@ -89,8 +90,8 @@
 @import "card-7";
 @import "card-8";
 @import "card-9";
-
 @import "event-card";
+@import "event-card-2";
 
 //trumps
 @import "trumps.utilities";
