--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -90,6 +90,8 @@
 @import "card-7";
 @import "card-8";
 @import "card-9";
+@import "card-10";
+@import "card-11";
 @import "event-card";
 @import "event-card-2";
 
