--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -1,5 +1,5 @@
 //Bootstrap
-
+@import "vendors/bootstrap/bootstrap";
 @import "vendors/font-awesome-4.7.0/font-awesome";
 // @import 'vendors/slick/slick';
 // @import 'vendors/slick/slick-theme';
